--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Gittraning</title>
 </head>
 <body>
-  こちらにフッターが来ます。
+  <header><h1>ようこそGitHubの世界へ</h1></header>
+  <footer><h2>こちらにフッターが来ます</h2></footer>
 </body>
 </html>
